# abbreviate-names

./: CHANGELOG.md  README.md  setup.cfg
src/names/: __init__.py  __main__.py  abbreviate.py
