[metadata]
name = abbreviate-names
version = attr: names.VERSION
author = Conrad Hughes
author_email = h_d24e0f27c082b3eb54c1@xrad.org
description = Uniquely abbreviate a set of names in a language-appropriate way.
long_description = file: README.md, CHANGELOG.md
# Could include LICENCE.md in long_description but seems overkill.
long_description_content_type = text/markdown
keywords = abbreviate, names, latin, english
url = https://github.com/ConradHughes/abbreviate-names
license = AGPL-3.0+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = False
package_dir =
    = src
packages = find:
install_requires =
python_requires = >=3.6

[options.entry_points]
console_scripts =
    abbreviate_names = names.__main__:main

[options.extras_require]
English = nltk>=3.5
Latin = cltk>=0.1.121

[options.packages.find]
where = src
